# Projects

./: .cache  README.md
3D_Portfolio/First_3D_Portfolio/: index.html  main.js  package-lock.json  package.json
MapIt/: pyproject.toml
MapIt/scripts/: bookSearch.py  mapIt.py  movieFinder.py
TheGameOfLife/The Game of Life 2/throw away/: gameModel.py  temp.py  temp2.py  view.py
TheGameOfLife/The Game of Life 2/throw away/__pycache__/: model.py  view.py
